--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "preact-transitioning",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Preact components for easily implementing basic CSS animations and transitions",
   "main": "lib/index.js",
   "files": [
@@ -53,9 +53,7 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
-  "dependencies": {
-    "classnames": "^2.2.6"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "preact": "^10.0.0"
   }
