--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
+      - name: Install 🔧
+        run: yarn
+
       - name: Publish 🚀
         uses: JS-DevTools/npm-publish@v1
         with:
