--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,28 @@
 {
   "extends": "airbnb",
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "ecmaFeatures": {
-      "legacyDecorators": true
-    }
-  },
+  "parser": "@babel/eslint-parser",
   "globals": {
     "window": true,
     "document": true
   },
   "rules": {
     "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
     "react/jsx-props-no-spreading": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-curly-newline": 0,
     "object-curly-newline": 0,
-    "semi": ["error", "never"],
+    "semi": [
+      "error",
+      "never"
+    ],
     "react/prop-types": 0,
     "default-case": 0,
-    "no-plusplus": 0,
+    "no-plusplus": 0
   },
   "settings": {
     "react": {
-      "pragma": "h",
-    },
-  },
+      "pragma": "h"
+    }
+  }
 }
