--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "preact-transitioning",
   "version": "1.2.0",
   "description": "Preact components for easily implementing basic CSS animations and transitions",
+  "source": "src/index.ts",
   "main": "lib/preact-transitioning.js",
   "module": "lib/preact-transitioning.module.js",
   "exports": "./lib/preact-transitioning.modern.js",
+  "unpkg": "./lib/preact-transitioning.umd.js",
+  "types": "./lib/types/index.d.ts",
   "files": [
     "lib"
   ],
@@ -13,8 +16,8 @@
     "docs": "yarn run build && webpack --progress --config webpack.config.docs.js",
     "lint": "eslint src && eslint examples",
     "clean": "rimraf lib",
-    "watch": "microbundle watch -i src -o lib -f modern,es,cjs --no-sourcemap",
-    "compile": "microbundle -i src -o lib -f modern,es,cjs --no-sourcemap",
+    "watch": "microbundle watch --no-sourcemap",
+    "compile": "microbundle --no-sourcemap",
     "build": "yarn run clean && yarn run compile",
     "prepublishOnly": "yarn run lint && yarn run build"
   },
@@ -35,29 +38,26 @@
   "author": "Roman Samoylov (https://github.com/fakundo)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
-    "@babel/preset-env": "^7.14.1",
-    "@babel/preset-react": "^7.13.13",
-    "babel-loader": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "microbundle": "^0.13.0",
+    "html-webpack-plugin": "^5.3.2",
+    "microbundle": "^0.13.3",
     "preact": "^10.0.5",
     "rimraf": "^3.0.2",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
-  "dependencies": {},
   "peerDependencies": {
-    "preact": "^10.5.13"
+    "preact": "^10.5.14"
   }
 }
