--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,12 @@
   "extends": "airbnb-typescript",
   "parser": "@typescript-eslint/parser",
   "plugins": [
+    "import",
     "@typescript-eslint/eslint-plugin"
   ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "globals": {
     "window": true,
     "document": true
@@ -13,16 +17,18 @@
     "@typescript-eslint/no-implied-eval": 0,
     "@typescript-eslint/no-throw-literal": 0,
     "@typescript-eslint/return-await": 0,
-    "@typescript-eslint/semi": 0,
+    "@typescript-eslint/no-redeclare": 0,
+    "@typescript-eslint/semi": [
+      "error",
+      "never"
+    ],
+    "object-curly-newline": 0,
+    "default-case": 0,
+    "no-plusplus": 0,
     "react/prop-types": 0,
     "react/jsx-props-no-spreading": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-curly-newline": 0,
-    "react/react-in-jsx-scope": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-unresolved": 0,
-    "object-curly-newline": 0,
-    "default-case": 0,
-    "no-plusplus": 0
+    "react/react-in-jsx-scope": 0
   }
 }
