--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
+    "jsxFactory": "",
+    "jsxFragmentFactory": "",
     "paths": {
       "preact-transitioning": ["./lib/types"]
     }
