--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "source": "src/index.ts",
   "main": "lib/preact-transitioning.js",
   "module": "lib/preact-transitioning.module.js",
-  "exports": "./lib/preact-transitioning.modern.js",
+  "exports": {
+    "types": "./lib/types/index.d.ts",
+    "require": "./lib/preact-transitioning.js",
+    "default": "./lib/preact-transitioning.modern.mjs"
+  },
   "unpkg": "./lib/preact-transitioning.umd.js",
   "types": "./lib/types/index.d.ts",
   "files": [
@@ -51,7 +55,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
-    "microbundle": "^0.15.0",
+    "microbundle": "^0.15.1",
     "preact": "^10.10.0",
     "prettier": "^2.8.4",
     "rimraf": "^3.0.2",
