--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-curly-newline": 0,
     "react/react-in-jsx-scope": 0,
+    "react/require-default-props": 0,
     "import/prefer-default-export": 0,
     "no-param-reassign": 0,
     "no-plusplus": 0
