feat: add storybook & fix transition group enter phase

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,16 @@
 {
   "extends": ["airbnb", "airbnb-typescript", "prettier"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "storybook"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
-    "react/prop-types": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-curly-newline": 0,
+    "react/no-children-prop": 0,
     "react/react-in-jsx-scope": 0,
     "react/require-default-props": 0,
     "import/prefer-default-export": 0,
-    "no-param-reassign": 0,
-    "no-plusplus": 0
+    "react/jsx-props-no-spreading": 0,
+    "import/no-extraneous-dependencies": 0,
+    "jsx-a11y/label-has-associated-control": 0
   }
 }
