--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "lib"
   ],
   "scripts": {
-    "dev": "webpack serve --progress --config webpack.config.development.js",
-    "docs": "yarn run build && webpack --progress --config webpack.config.docs.js",
-    "lint": "eslint src && eslint examples",
+    "prepare": "husky",
+    "prepublishOnly": "yarn run lint && yarn run build",
+    "lint": "eslint src && eslint stories && eslint scripts",
     "clean": "rimraf lib",
-    "watch": "microbundle watch --no-sourcemap",
-    "compile": "microbundle --no-sourcemap",
+    "compile": "microbundle --no-sourcemap --tsconfig tsconfig.build.json",
     "build": "yarn run clean && yarn run compile",
-    "prepublishOnly": "yarn run lint && yarn run build"
+    "docgen": "node scripts/docgen",
+    "titlefix": "node scripts/titlefix",
+    "dev": "yarn run docgen && storybook dev -p 6006",
+    "docs": "yarn run docgen && storybook build -o docs && yarn run titlefix"
   },
   "keywords": [
     "preact",
@@ -42,9 +44,18 @@
   "author": "Roman Samoylov (https://github.com/fakundo)",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@storybook/addon-actions": "^8.6.14",
+    "@storybook/addon-controls": "^8.6.14",
+    "@storybook/addon-docs": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/manager-api": "^8.6.14",
+    "@storybook/preact-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@storybook/theming": "^8.6.14",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
-    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -54,20 +65,20 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "html-webpack-plugin": "^5.6.0",
+    "eslint-plugin-storybook": "^0.11.2",
+    "husky": "^9.1.7",
     "microbundle": "^0.15.1",
-    "preact": "^10.20.1",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.3",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "preact": "^10.27.2",
+    "prettier": "^3.6.2",
+    "react-docgen-typescript": "^2.4.0",
+    "rimraf": "^6.0.1",
+    "storybook": "^8.6.14",
+    "typescript": "5.5.4",
+    "vite": "^7.1.10",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "preact": ">=10.0.0"
   },
-  "dependencies": {},
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@3.8.7"
 }
